p6-ingress/k8s/imaginary-service.yml
apiVersion: v1
kind: Service
metadata:
  name: imaginary-svc
spec:
  ports: 
    - port: 9000
      protocol: TCP
  selector:
    app: imaginary
