p6-ingress/k8s/imaginary-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: imaginary-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: imaginary.192.168.1.100.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: imaginary-svc
                port:
                  number: 9000
